Sort by popularity (#14873)
* sort by popularity

* sort by popularity

* checkstyle

* Fix totalVotes & indexing

* rebase with main

* add popularity and name sort field

* update unit tests

* Fix feedResourceTest

* Remove Ngram from team search indexing

* Change boost for ngram to 1.0

* py test

* 0 totalvotes if votes is null

---------

Co-authored-by: Sriharsha Chintalapani <harsha@getcollate.io>
Co-authored-by: karanh37 <karanh37@gmail.com>
Co-authored-by: Chirag Madlani <12962843+chirag-madlani@users.noreply.github.com>
Co-authored-by: Ayush Shah <ayush@getcollate.io>