@@ -3,7 +3,7 @@ package org.openmetadata.service.search.indexes;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import org.openmetadata.common.utils.CommonUtil;
 import org.openmetadata.schema.entity.data.Chart;
 import org.openmetadata.service.Entity;
 import org.openmetadata.service.search.SearchIndexUtils;
@@ -22,12 +22,16 @@ public record ChartIndex(Chart chart) implements SearchIndex {
     doc.put(
         "fqnParts",
         getFQNParts(
-            chart.getFullyQualifiedName(),
-            suggest.stream().map(SearchSuggest::getInput).collect(Collectors.toList())));
+            chart.getFullyQualifiedName(), suggest.stream().map(SearchSuggest::getInput).toList()));
     doc.put("suggest", suggest);
     doc.put("entityType", Entity.CHART);
     doc.put("owner", getEntityWithDisplayName(chart.getOwner()));
     doc.put("domain", getEntityWithDisplayName(chart.getDomain()));
+    doc.put(
+        "totalVotes",
+        CommonUtil.nullOrEmpty(chart.getVotes())
+            ? 0
+            : chart.getVotes().getUpVotes() - chart.getVotes().getDownVotes());
     return doc;
   }
 }
