@@ -3,7 +3,7 @@ package org.openmetadata.service.search.indexes;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import org.openmetadata.common.utils.CommonUtil;
 import org.openmetadata.schema.entity.data.DatabaseSchema;
 import org.openmetadata.service.Entity;
 import org.openmetadata.service.search.SearchIndexUtils;
@@ -24,10 +24,15 @@ public record DatabaseSchemaIndex(DatabaseSchema databaseSchema) implements Sear
         "fqnParts",
         getFQNParts(
             databaseSchema.getFullyQualifiedName(),
-            suggest.stream().map(SearchSuggest::getInput).collect(Collectors.toList())));
+            suggest.stream().map(SearchSuggest::getInput).toList()));
     doc.put("suggest", suggest);
     doc.put("entityType", Entity.DATABASE_SCHEMA);
     doc.put("owner", getEntityWithDisplayName(databaseSchema.getOwner()));
+    doc.put(
+        "totalVotes",
+        CommonUtil.nullOrEmpty(databaseSchema.getVotes())
+            ? 0
+            : databaseSchema.getVotes().getUpVotes() - databaseSchema.getVotes().getDownVotes());
     doc.put("domain", getEntityWithDisplayName(databaseSchema.getDomain()));
     return doc;
   }
